# carousee

./: .gitignore  LICENSE  README.md  compose.py  example_script.md  example_script_parsed.yaml  fetch_images.py  layouts.py  mkdocs.yml  newton_parsed.yaml  newton_script_parsed.yaml  parse_script.py  pyproject.toml  requirements.txt  run.py  segment.py
.github/workflows/: publish.yml
docs/: index.md
src/carousee/: __init__.py  cli.py  composer.py  fetcher.py  fonts.py  layouts.py  parser.py  placer.py  segmenter.py
